converting for loops to streams and updatng tests